// Vitest Snapshot v1

exports[`Memcached > Props > All the props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "memcached",
      },
      "name": "test-memcached-test-c803ac31",
      "namespace": "test",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 11211,
          "protocol": "TCP",
        },
      ],
      "selector": {
        "app": "my-app",
        "instance": "test",
        "role": "memcached",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "memcached",
      },
      "name": "test-memcached-test-memcached-test-sts-c8eb6f20",
      "namespace": "test",
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "app": "my-app",
          "instance": "test",
          "role": "memcached",
        },
      },
      "serviceName": "test-memcached-test-c803ac31",
      "template": {
        "metadata": {
          "labels": {
            "app": "my-app",
            "environment": "test",
            "instance": "test",
            "region": "local",
            "release": "v1",
            "role": "memcached",
          },
        },
        "spec": {
          "containers": [
            {
              "args": [
                "--memory-limit=64",
              ],
              "image": "memcached:v1",
              "livenessProbe": {
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 11211,
                },
                "timeoutSeconds": 5,
              },
              "name": "memcached",
              "ports": [
                {
                  "containerPort": 11211,
                },
              ],
              "readinessProbe": {
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 11211,
                },
                "timeoutSeconds": 5,
              },
              "resources": {
                "limits": {
                  "cpu": "50m",
                  "memory": "64Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
]
`;

exports[`Memcached > Props > Minimal required props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "instance": "memcached-test",
        "release": "v1",
        "role": "memcached",
      },
      "name": "test-memcached-test-c803ac31",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 11211,
          "protocol": "TCP",
        },
      ],
      "selector": {
        "instance": "memcached-test",
        "role": "memcached",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "instance": "memcached-test",
        "release": "v1",
        "role": "memcached",
      },
      "name": "test-memcached-test-memcached-test-sts-c8eb6f20",
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "instance": "memcached-test",
          "role": "memcached",
        },
      },
      "serviceName": "test-memcached-test-c803ac31",
      "template": {
        "metadata": {
          "labels": {
            "instance": "memcached-test",
            "release": "v1",
            "role": "memcached",
          },
        },
        "spec": {
          "containers": [
            {
              "args": [
                "--memory-limit=64",
              ],
              "image": "memcached:v1",
              "livenessProbe": {
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 11211,
                },
                "timeoutSeconds": 5,
              },
              "name": "memcached",
              "ports": [
                {
                  "containerPort": 11211,
                },
              ],
              "readinessProbe": {
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 11211,
                },
                "timeoutSeconds": 5,
              },
              "resources": {
                "limits": {
                  "cpu": "50m",
                  "memory": "64Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
]
`;
